--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "pobi",
     "version": "0.0.1",
-    "description": "A 'Kill You 3000' package for G.F.W.",
+    "description": "A `Kill You 3000` package for G.F.W.",
     "author": "pobiren <pobiren@gmail.com>",
     "dependencies": {
         "native-dns": "https://github.com/pobiren/node-dns/tarball/master"
